--- a/service/.env.example
+++ b/service/.env.example
@@ -4,7 +4,11 @@
 # ═══════════════════════════════════════════════════════════════════
 # MongoDB Configuration
 # ═══════════════════════════════════════════════════════════════════
-MONGODB_URI=mongodb://localhost:27017
+# Local MongoDB:
+# MONGODB_URI=mongodb://localhost:27017
+
+# MongoDB Atlas (cloud):
+MONGODB_URI=mongodb+srv://username:<db_password>@cluster.mjehlqb.mongodb.net/?appName=reptilia
 MONGODB_DATABASE=reptilia
 
 # ═══════════════════════════════════════════════════════════════════
