--- a/service/requirements.txt
+++ b/service/requirements.txt
@@ -5,5 +5,6 @@ pyobjc-framework-Cocoa==12.1
 pyobjc-framework-CoreBluetooth==12.1
 pyobjc-framework-libdispatch==12.1
 pymongo>=4.6.0
+dnspython>=2.4.0
 python-dotenv
 python-kasa
