--- a/service/.env.example
+++ b/service/.env.example
@@ -8,33 +8,6 @@ MONGODB_URI=mongodb://localhost:27017
 MONGODB_DATABASE=reptilia
 
 # ═══════════════════════════════════════════════════════════════════
-# Kasa Smart Outlet Configuration (optional)
-# ═══════════════════════════════════════════════════════════════════
-# Set KASA_IP to enable Kasa smart outlet control
-# Leave unset to use mock outlet controller for testing
-KASA_IP=192.168.1.100
-KASA_USERNAME=your-email@example.com
-KASA_PASSWORD=your-password
-
-# Outlet mapping: maps outlet IDs to physical powerstrip plug numbers (1-based)
-# Format: JSON object {"outlet-id": plug_number, ...}
-KASA_OUTLET_MAPPING={"basking-heat-lamp": 1, "ambient-heater": 2, "humidifier": 3, "uvb-light": 4}
-
-# ═══════════════════════════════════════════════════════════════════
-# BLE Sensor Configuration - Xiaomi LYWSD03MMC
-# ═══════════════════════════════════════════════════════════════════
-# Get these addresses by scanning for BLE devices on your Pi
-# Use: sudo hcitool lescan
-
-# Warm side (basking area) sensor
-SENSOR_WARM_SIDE_ADDRESS=XX:XX:XX:XX:XX:XX
-SENSOR_WARM_SIDE_ID=basking-temp-sensor
-
-# Cool side sensor
-SENSOR_COOL_SIDE_ADDRESS=YY:YY:YY:YY:YY:YY
-SENSOR_COOL_SIDE_ID=cool-temp-sensor
-
-# ═══════════════════════════════════════════════════════════════════
 # Location Settings (for sunrise/sunset DAY/NIGHT mode)
 # ═══════════════════════════════════════════════════════════════════
 HABITAT_LATITUDE=40.7128       # Your latitude (default: NYC)
@@ -42,7 +15,7 @@ HABITAT_LONGITUDE=-74.0060     # Your longitude
 HABITAT_TIMEZONE=America/New_York
 
 # ═══════════════════════════════════════════════════════════════════
-# Sensor Connection Settings
+# Sensor Connection Settings (global defaults)
 # ═══════════════════════════════════════════════════════════════════
 SENSOR_CONNECTION_TIMEOUT=30.0
 SENSOR_MAX_RETRIES=3
@@ -60,3 +33,56 @@ POLLING_INTERVAL_SECONDS=30
 # Set LOG_FILE to enable file logging (used by API for iPad log streaming)
 # In Docker, this is set automatically via docker-compose
 # LOG_FILE=/app/logs/service.log
+
+# ═══════════════════════════════════════════════════════════════════
+# HARDWARE CONFIGURATION
+# ═══════════════════════════════════════════════════════════════════
+#
+# Sensor BLE addresses and power strip configuration are now stored
+# in MongoDB as part of each habitat document, not in environment variables.
+#
+# Use the API to create/update habitats with hardware configuration:
+#
+# POST /habitats
+# {
+#   "habitat_id": "my-habitat",
+#   "name": "My Reptile Enclosure",
+#   "species": "leopard_gecko",
+#   "sensor_config": {
+#     "basking_temp": "basking-temp-sensor",
+#     "cool_temp": "cool-temp-sensor",
+#     "humidity": "basking-temp-sensor"
+#   },
+#   "outlet_config": {
+#     "heat_lamp": "basking-heat-lamp",
+#     "ceramic_heater": "ambient-heater",
+#     "humidifier": "humidifier",
+#     "uvb": "uvb-light"
+#   },
+#   "sensors": [
+#     {
+#       "sensor_id": "basking-temp-sensor",
+#       "ble_address": "A4:C1:38:XX:XX:XX",
+#       "location": "warm_side",
+#       "device_type": "LYWSD03MMC"
+#     },
+#     {
+#       "sensor_id": "cool-temp-sensor",
+#       "ble_address": "A4:C1:38:YY:YY:YY",
+#       "location": "cool_side",
+#       "device_type": "LYWSD03MMC"
+#     }
+#   ],
+#   "power_strip": {
+#     "strip_id": "strip-001",
+#     "ip": "192.168.1.100",
+#     "username": "user@example.com",
+#     "password": "password",
+#     "outlets": [
+#       {"outlet_id": "basking-heat-lamp", "plug_number": 1},
+#       {"outlet_id": "ambient-heater", "plug_number": 2},
+#       {"outlet_id": "humidifier", "plug_number": 3},
+#       {"outlet_id": "uvb-light", "plug_number": 4}
+#     ]
+#   }
+# }
